--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <button type="button" onclick="t.runAll()">All tests</button>
         </p>
         <script src="index.js"></script>
+        <script src="GridMap.js"></script>
+        <script src="PositionedNode.js"></script>
+        <script src="RouteStepper.js"></script>
+        <script src="PathNode.js"></script>
+        <script src="Route.js"></script>
+        <script src="GridTest.js"></script>
         <script src="core.js"></script>
         <script src="test.js"></script>
         <script src="self-test.js"></script>
