--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </tbody>
         </table>
         <canvas id="grid"></canvas>
-        <p><input type="file" id="wasm-import"/></p>
+        <p>Import .wasm core <input type="file" id="wasm-import"/></p>
         <p><label>Random size <input id="test-size" type="number" value="70"/></label></p>
         <p><label><input type="checkbox" onchange="t.randomCornerToCorner = this.checked" checked>Random is corner-to-corner</label></p>
         <p><label>Test <input id="test-number" type="number" value=""/></label></p>
