--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         </table>
         <canvas id="grid"></canvas>
         <p>Import .wasm core <input type="file" id="wasm-import"/></p>
-        <p><label>Random size <input id="test-size" type="number" value="200"/></label></p>
+        <p><label>Random size <input id="test-size" type="number"
+        value="200"/></label></p>
+        <p><label>Obstruction density <input id="density" type="number" min="0"
+        max="1" step="0.1" value="0.5"/></label></p>
         <p><label><input type="checkbox" onchange="t.randomCornerToCorner = this.checked" checked>Random is corner-to-corner</label></p>
         <p><label>Test <input id="test-number" type="number" value=""/></label></p>
         <p><label><input type="checkbox" onchange="t.paused = this.checked">Pause</label></p>
@@ -56,6 +59,10 @@
             let size = document.querySelector("#test-size").value
             t.tests = PathTests
             t.randomTest(size)
+            t.density = document.querySelector("#density").value
+            document.querySelector("#density").onchange = function() {
+                t.density = this.value
+            }
             document.querySelector("#test-number").onchange = function() {
                 t.selectTest(this.value)
             }
