--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         </table>
         <canvas id="grid"></canvas>
         <p>Import .wasm core <input type="file" id="wasm-import"/></p>
-        <p><label>Random size <input id="test-size" type="number"
-        value="300"/></label></p>
+        <p><label>
+            Random size
+            <input id="test-size" type="number"
+        value="300"/>
+            x
+            <span id="test-size-out">300</span>
+        </label></p>
         <p><label>Obstruction density <input id="density" type="number" min="0"
         max="0.5" step="0.1" value="0.5"/></label></p>
         <p><label><input type="checkbox" onchange="t.randomCornerToCorner = this.checked" checked>Random is corner-to-corner</label></p>
@@ -67,7 +72,8 @@
                 t.selectTest(this.value)
             }
             document.querySelector("#test-size").onchange = function() {
-                size = this.value
+                size = +this.value
+                document.querySelector("#test-size-out").textContent = +this.value
             }
         </script>
     </body>
