Split out the framework

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </section>
         <script src="index.js"></script>
         <script src="GridMap.js"></script>
+        <script src="Frameworker.js"></script>
         <script src="PositionedNode.js"></script>
         <script src="RouteStepper.js"></script>
         <script src="PathNode.js"></script>
@@ -113,78 +114,6 @@
                 set testNumber(v) {
                     this._testNumber = v
                     t.selectTest(v)
-                }
-            }
-            class Frameworker {
-                /**
-                 * @type {Record<string, (() => any)[]}
-                 */
-                #listeners = {}
-
-                /**
-                 * @type {Record<string, any>}
-                 */
-                #retainedData
-
-                /**
-                 * @type {Record<string, any>}
-                 */
-                constructor(retainedData) {
-                    this.#retainedData = retainedData
-                }
-
-                /**
-                 * @param {HTMLElement} form
-                 */
-                init(form) {
-                    for(const e of form.querySelectorAll("[data-readwrite]")) {
-                        /**
-                         * @type {HTMLInputElement}
-                         */
-                        const he = e
-                        const key = he.dataset.readwrite
-                        this.#listeners[key] = this.#listeners[key] || []
-                        if(he.type == "checkbox") {
-                            he.onchange = function() {
-                                this.#retainedData[key] = this.checked
-                                for(const l of this.#listeners[key]) {
-                                    l()
-                                }
-                            }
-                            he.checked = this.#retainedData[key]
-                        } else {
-                            he.onchange = function() {
-                                this.#retainedData[key] = this.value
-                                for(const l of this.#listeners[key]) {
-                                    l()
-                                }
-                            }
-                            he.value = this.#retainedData[key]
-                        }
-                    }
-                    for(const e of form.querySelectorAll("[data-read]")) {
-                        /**
-                         * @type {HTMLElement}
-                         */
-                        const he = e
-                        const key = he.dataset.read
-                        this.#listeners[key] = this.#listeners[key] || []
-                        this.#listeners[key].push(
-                            () => he.textContent = this.#retainedData[key]
-                        )
-                        he.textContent = this.#retainedData[key]
-                    }
-
-                    for(const e of form.querySelectorAll("[data-call]")) {
-                        /**
-                         * @type {HTMLButtonElement}
-                         */
-                        const he = e
-                        const key = he.dataset.call
-                        he.onclick = function() {
-                            this.#retainedData[key]()
-                        }
-                    }
                 }
             }
 
